--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,15 @@
         "role": "Developer"
     }],
     "require": {
+    "anaklanangdev/object-intruder":"dev-master@dev"
+  },
+  "repositories": [
+    {
+       "type": "library",
+       "url": "https://github.com/anaklanangdev/object-intruder",
+    }
+  ]
+    "require": {
         "php": "^5.6|^7.0"
     },
     "require-dev": {
